--- a/public/quiz.html
+++ b/public/quiz.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="styles.css">
     <script src="../src/quiz.js"></script>
 </head>
+
 <body onload="initQuiz()">
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
+                <li><a id="home-link" href="index.html">Home</a></li>
+                <li><a id="about-link" href="About.html">About-Me</a></li>
+                <li><a id="quiz-link" href="quiz.html">Quiz</a></li>
             </ul>
         </nav>
+        <script src="navigate.js"></script>
     </header>
     <h1>Quiz about Web Technologies</h1>
     <div id="quiz-container">
@@ -23,4 +25,51 @@
         <button onclick="nextQuestion()">Next Question</button>
     </div>
 </body>
+
 </html>
+
+
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #121212;
+        color: #FFFFFF;
+    }
+
+    header {
+        background: #333;
+        color: #fff;
+        padding: 10px 20px;
+        text-align: center;
+    }
+
+    nav ul {
+        display: flex;
+        list-style-type: none;
+    }
+
+    nav ul li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .current-page {
+        font-weight: bold;
+        font-size: x-large;
+        color: rgb(99, 245, 15);
+    }
+
+    nav ul li a {
+        color: #BBBBBB;
+        text-decoration: none;
+        font-size: large;
+        font-weight: bold;
+        font-style: oblique;
+    }
+</style>
