--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
             <div class="left-section">
                 <div class="section_me">
                     <div class="detail_title">
-                        <h1>About Me</h1>
+                        <h1>Who I am</h1>
                     </div>
                     <div class=detail_info>
                         <div class="section-right">
