--- a/public/quiz.html
+++ b/public/quiz.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <script src="socket.io.js"></script>
     <script src="quiz.js"></script>
 </head>
 
@@ -24,14 +25,26 @@
     </div>
     <div class="container">
         <div class="quiz" id="quiz">
+            <div id="name-input-container" class="name-input">
+             <label for="name">Enter your name: </label>
+                <input type="text" id="name" name="name">
+                <button onclick="startQuiz()">Start Quiz</button>
+            </div>
+            <div id="timer" style="color: red; font-weight: bold;"></div>
             <div class="question-text" id="question"></div>
             <div id="options-container" class="options-container"></div>
-            <button onclick="submitAnswer()" id="next-question">Next Question</button>
+            <div id="feedback" class="feedback"></div>
+            <button onclick="nextQuestion()" id="next-question-btn" style="display: none;">Next question</button>
+            <button onclick="submitAnswer()" id="next-question">Submit answer</button>
             <button onclick="submitAnswer()" id="submit" style="display:none;">Submit</button>
         </div>
         <div class="result" id="result" style="display: none;">
             <p id="result-text">Result</p>
         </div>
+        <div class="leaderboard" id="leaderboard" style="display: none;">
+            <h2>Leaderboard</h2>
+            <ul id="leaderboard-list"></ul>
+    </div>
     </div>
 </body>
 </html>
@@ -169,5 +182,134 @@ button:hover {
     cursor: pointer;
     width: 100%;
 }
+
+.name-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+
+.name-input label {
+    margin-left: 20px;
+    margin-bottom: 10px;
+    color: #00ff0d;
+    font-size: x-large;
+    font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.name-input input[type="text"] {
+    width: 100%;
+    max-width: 300px;
+    padding: 10px;
+    border: 5px solid #6e7783;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
+    font-size: 16px;
+}
+
+.name-input button {
+    padding: 10px 20px;
+    background-color: #1c87c9;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: large;
+    font-weight: bold;
+}
+
+.name-input button:hover {
+    background-color: #0056b3;
+}
+
+.feedback {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.feedback.correct {
+    color: green;
+}
+
+.feedback.incorrect {
+    color: red;
+}
+
+#next-question-btn {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#next-question-btn:hover {
+    background-color: #0056b3;
+}
+
+#result {
+    display: none;
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #333;
+    border-radius: 10px;
+}
+
+#result-text {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+}
+
+#leaderboard {
+    display: none;
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #333;
+    border-radius: 10px;
+}
+
+#leaderboard-list {
+    list-style: none;
+    padding: 0;
+}
+
+#leaderboard-list li {
+    margin-bottom: 10px;
+}
+
+#leaderboard-list span {
+    font-weight: bold;
+}
+
+#leaderboard-list span.correct {
+    color: green;
+}
+
+#leaderboard-list span.incorrect {
+    color: red;
+}
+
+#leaderboard-list span.name {
+    font-weight: normal;
+}
+
+#leaderboard-list span.time {
+    font-weight: normal;
+}
+
 
 </style>
