change some color of the button

--- a/public/quiz.html
+++ b/public/quiz.html
@@ -21,7 +21,7 @@
         <script src="navigate.js"></script>
     </header>
     <div class="title">
-        <h1>Quiz about me</h1>
+        <h1>Welcome to the quiz!</h1>
     </div>
     <div class="container">
         <div class="quiz" id="quiz">
@@ -168,7 +168,7 @@ button:hover {
 
 .option-button {
     padding: 10px 20px;
-    background-color: #81a2b6;
+    background-color: #007bff;
     color: white;
     border: none;
     border-radius: 5px;
